@@ -278,7 +278,13 @@ $wgOptionalMessages = array(
 	'widthheight',
 	'exif-fnumber-format',
 	'exif-focallength-format',
+	'exif-compression-5',
 	'exif-compression-6',
+	'exif-compression-7',
+	'exif-compression-8',
+	'exif-compression-32773',
+	'exif-compression-32946',
+	'exif-compression-34712',
 	'exif-photometricinterpretation-2',
 	'exif-photometricinterpretation-6',
 	'exif-xyresolution-i',
@@ -588,7 +594,16 @@ $wgEXIFMessages = array(
 	'exif-contact-value',
 	'exif-subjectnewscode-value',
 	'exif-compression-1',
+	'exif-compression-2',
+	'exif-compression-3',
+	'exif-compression-4',
+	'exif-compression-5',
 	'exif-compression-6',
+	'exif-compression-7',
+	'exif-compression-8',
+	'exif-compression-32773',
+	'exif-compression-32946',
+	'exif-compression-34712',
 	'exif-copyrighted-true',
 	'exif-copyrighted-false',
 	'exif-photometricinterpretation-2',
